--- a/vercel.json
+++ b/vercel.json
@@ -1,19 +1,7 @@
 {
   "rewrites": [
     {
-      "source": "/admin/login",
-      "destination": "/index.html"
-    },
-    {
-      "source": "/admin/dashboard",
-      "destination": "/index.html"
-    },
-    {
-      "source": "/admin/(.*)",
-      "destination": "/index.html"
-    },
-    {
-      "source": "/((?!api|_next/static|_next/image|favicon.ico|sitemap.xml|robots.txt|.*\\.(css|js|json|png|jpg|jpeg|gif|svg|ico|woff|woff2|ttf|eot)).*)",
+      "source": "/(.*)",
       "destination": "/index.html"
     }
   ]
