--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
     "typecheck": "tsc --noEmit -p tsconfig.app.json",
     "start": "node server.js",
     "vercel-build": "npm install --legacy-peer-deps && npm run build"
-   
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.57.4",
@@ -20,6 +19,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.20.0",
+    "react-toastify": "^11.0.5",
     "vite": "^7.2.7"
   },
   "devDependencies": {
