--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,24 @@
-logs
+# ================================
+# REACT/VITE FRONTEND .GITIGNORE FILE
+# ================================
+
+# Environment variables
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Dependencies
+node_modules/
+
+# Build outputs
+dist/
+dist-ssr/
+build/
+
+# Logs
+logs/
 *.log
 npm-debug.log*
 yarn-debug.log*
@@ -6,18 +26,87 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
-node_modules
-dist
-dist-ssr
+# Runtime data
+pids/
+*.pid
+*.seed
+*.pid.lock
+
+# Coverage directory
+coverage/
+
+# TypeScript cache
+*.tsbuildinfo
+
+# Optional npm cache directory
+.npm
+
+# Optional eslint cache
+.eslintcache
+
+# Microbundle cache
+.rpt2_cache/
+.rts2_cache_cjs/
+.rts2_cache_es/
+.rts2_cache_umd/
+
+# Optional REPL history
+.node_repl_history
+
+# Output of 'npm pack'
+*.tgz
+
+# Vite related
+.vite/
+
+# Rollup related
+.rollup.cache/
+
+# Local env files
 *.local
 
+# IDE and editor files
 .vscode/*
 !.vscode/extensions.json
-.idea
+.idea/
+*.swp
+*.swo
+*~
+
+# OS generated files
 .DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
 *.suo
 *.ntvs*
 *.njsproj
 *.sln
-*.sw?
-.env
+
+# Temporary files
+*.tmp
+*.temp
+*.bak
+*.backup
+
+# Certificate files
+*.pem
+*.key
+*.crt
+*.csr
+
+# Testing
+__tests__/
+__mocks__/
+
+# Storybook
+storybook-static/
+
+# Documentation
+docs/_book/
+
+# ESLint
+.eslintcache
